# devdash

./: .gitignore  README.md  install.sh  pyproject.toml
devdash/: app.py  cli.py  config.py  processes.py  pyproject.toml  run.sh  screens.py  updater.py
devdash/devdash/: app.py  cli.py  processes.py
