[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devdash"
version = "0.1.0"
description = "Dev process dashboard - see and manage running Node processes and Docker containers"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
devdash = "devdash.cli:main"
